maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:7: error: ')' expected but 'return' found.
    return true
    ^ShortestPathMaze:10: error: ';' expected but 'else' found.
  else {
  ^ShortestPathMaze:43: error: expected start of definition
override def run() {
         ^ShortestPathMaze:66: error: expected class or object definition
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
        ^ShortestPathMaze:67: error: expected class or object definition
	def aMurNord(x:Int, y:Int):Boolean = hasTopWall(x,y)
        ^ShortestPathMaze:68: error: expected class or object definition
	def aMurOuest(x:Int, y:Int):Boolean = hasLeftWall(x, y)
        ^ShortestPathMaze:69: error: Unmatched closing brace '}' ignored here
}
^